hw5_lab8/tests/errors/syn_missing_rparen.kt
fun main() {
    if (true {
        println("oops")
    }
}
